--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "core-js": "^3.6.5",
     "font-awesome": "^4.7.0",
     "vue": "^2.6.11",
-    "vue-router": "^3.2.0",
     "vue-class-component": "^7.2.3",
-    "vue-property-decorator": "^8.4.2"
+    "vue-property-decorator": "^8.4.2",
+    "vue-router": "^3.2.0",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.33.0",
